<resources>

    <string-array name="user_rule_array">
        <item>Admin</item>
        <item>Kindergarten Manager</item>
        <item>Parent</item>
        <item>Staff Member</item>
    </string-array>

    <string-array name="staff_rules_array">
        <item>Teacher</item>
        <item>Assistant</item>
    </string-array>

    <string name="app_name">Kindergarten Management</string>
    <string name="kindergarten_tab">Kindergarten</string>
    <string name="class_tab">Class</string>
    <string name="staff_tab">Staff</string>
    <string name="select_rule">Select Rule:</string>
    <string name="select_assigned_kindergarten">Select Kindergarten:</string>
    <string name="select_assigned_class">Select Class:</string>
    <string name="selected_date">"Selected Date: "</string>
    <string name="name">Name</string>
    <string name="staff_member_name">Staff Member Name:</string>
    <string name="set_start_working_date">Set Start Working date</string>
    <string name="new_name">New Name</string>
    <string name="update_staff_member">Update Staff Member</string>
    <string name="add_staff_member">Add Staff Member</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_staff">Add Staff</string>
    <string name="add_class">Add Class</string>
    <string name="type">Type:</string>
    <string name="max_children">Max Children:</string>
    <string name="age_range">Age Range:</string>
    <string name="temp_text">temp text</string>
    <string name="name_">Name:</string>
    <string name="rule_">Rule:</string>
    <string name="start_working_date_">Start Working Date:</string>
    <string name="class_number">Class number:</string>
    <string name="class_type">Class Type:</string>
    <string name="min_age_">Min Age:</string>
    <string name="max_age_">Max Age:</string>
    <string name="update_class">Update Class</string>
    <string name="organizational_affiliation">Organizational Affiliation:</string>
    <string name="closing_time">Closing Time:</string>
    <string name="opening_time">Opening Time:</string>
    <string name="phone">Phone:</string>
    <string name="city">City:</string>
    <string name="address">Address:</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="kindergarten_name">Kindergarten Name:</string>
    <string name="add_kindergarten">Add Kindergarten</string>
    <string name="update_kindergarten">Update Kindergarten</string>
    <string name="set_closing_time">Set Closing Time</string>
    <string name="set_opening_time">Set Opening Time</string>
    <string name="email_">Email:</string>
    <string name="password_">Password:</string>
    <string name="login">Login</string>
    <string name="email__">Email..</string>
    <string name="password__">Password..</string>
    <string name="switch_to_sign_up">Not have an account? Sign Up</string>
    <string name="switch_to_login">Have an account? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="child_registration">Child Registration</string>
    <string name="register_child">Register Child</string>
    <string name="full_name_">Full Name:</string>
    <string name="age_">Age:</string>
    <string name="find_kindergarten">Find Kindergartens</string>
    <string name="organizational_affiliation_">Organizational Affiliation:</string>
    <string name="find_suitable_kindergartens">Find suitable kindergartens</string>
    <string name="select_up_to_3_favorite_classes_">Select up to 3 Favorite Classes (filtered by selected Kindergarten):</string>
    <string name="set_favorite_classes_">Set Favorite Classes</string>
    <string name="select_kindergarten_filtered_by_selected_city">Select Kindergarten (filtered by selected city):</string>
    <string name="belongs_to_kindergarten_">Belongs to Kindergarten:</string>
    <string name="select_class_">Select Class:</string>
    <string name="sign_out">Sign Out</string>
    <string name="parent_page">Parent Page</string>
    <string name="manager_page">Manager Page</string>
    <string name="upload_image">Upload Image</string>

</resources>