<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#A9A9A9"
android:orientation="vertical"
android:padding="16dp"
tools:context=".views.fragments.UpdateStaffFragment">

    <TextView
        android:id="@+id/staff_member_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:text="@string/staff_member_name"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

<EditText
    android:id="@+id/update_text_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/new_name"
    android:inputType="text" />

<Button
    android:id="@+id/button_update_start_working_date"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@android:color/background_dark"
    android:text="@string/set_start_working_date" />

<TextView
    android:id="@+id/label_update_date"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textColor="@android:color/black"
    android:background="@color/white"
    android:textSize="18sp" />

<TextView
    android:id="@+id/label_update_rule"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:padding="8dp"
    android:text="@string/select_rule"
    android:textColor="@android:color/black"
    android:textStyle="bold" />

<Spinner
    android:id="@+id/spinner_update_rule"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:entries="@array/staff_rules_array" />

<TextView
    android:id="@+id/label_update_kindergarten"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:padding="8dp"
    android:text="@string/select_assigned_kindergarten"
    android:textColor="@android:color/black"
    android:textStyle="bold" />

<Spinner
    android:id="@+id/spinner_update_kindergarten"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

<TextView
    android:id="@+id/label_update_class"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:padding="8dp"
    android:text="@string/select_assigned_class"
    android:textColor="@android:color/black"
    android:textStyle="bold" />

<Spinner
    android:id="@+id/spinner_update_class"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />


<Button
    android:id="@+id/button_update_staff"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="@string/update_staff_member" />
</LinearLayout>
