<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".views.fragments.ChildRegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/child_registration"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:text="Child ID"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_child_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:text="@string/full_name_"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_full_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text" />



        <TextView
            android:id="@+id/label_select_kindergarten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:text="@string/select_kindergarten_filtered_by_selected_city"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_kindergarten_child_registration"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:text="@string/select_up_to_3_favorite_classes_"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_set_favorite_classes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/set_favorite_classes_" />

        <Button
            android:id="@+id/button_child_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/register_child" />
    </LinearLayout>
</ScrollView>
