<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9A9A9"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".views.fragments.AddClassFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:text="@string/class_type"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_type"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:text="@string/max_children"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_max_children"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:inputType="number" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:text="@string/min_age_"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:text="@string/max_age_"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/edit_text_min_age"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/edit_text_max_age"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:text="@string/select_assigned_kindergarten"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_kindergarten"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <Button
        android:id="@+id/button_add_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:layout_marginTop="30dp"
        android:text="@string/add_class" />
</LinearLayout>
