<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_text"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_view_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_city_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_view_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_phone_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_view_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_opening_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opening_time"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_view_opening_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_closing_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closing_time"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_view_closing_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_organizational_affiliation_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organizational_affiliation"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_view_organizational_affiliation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/update" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_delete"
                android:backgroundTint="@android:color/holo_red_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
